--- a/styles.css
+++ b/styles.css
@@ -23,20 +23,6 @@ body {
 	background-size: 2600px 1600px;
 }
 
-.white {
-	background-color:rgba(255,255,255,0.7);
-	padding: 20px;
-	margin-top: 125px;
-}
-
-.black {
-	background-color:rgba(0,0,0,0.7);
-	padding: 20px;
-	width: 700px;
-	margin-top: 125px;
-}
-
-
 #wrapper {
 	width: 100%;
 	min-width: 1700px;
@@ -171,12 +157,6 @@ a {
 	text-decoration: none;
 	color: #FFFFFF;
 }
-
-.white a {
-	text-decoration: underline;
-	color: #000000;
-}
-
 a:link {
 	border-top-left-radius: 0px;
 }
@@ -396,8 +376,6 @@ image body {
 	margin-top: -814px;
 	float: left;
 }
-
-
 #wrapper #body1_volunteer {
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 	color: #FFFFFF;
@@ -735,7 +713,6 @@ image body {
 	margin-top: -186px;
 	margin-left: 218px;
 }
-
 #wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_1 {
 	width: 150px;
 	border-color: #000000;
@@ -751,11 +728,6 @@ image body {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_1 a {
-	color: #000000;
-}
-
 #wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_1:hover  {
 	width: 150px;
 	border-color: #000000;
@@ -770,14 +742,8 @@ image body {
 	font-size: x-large;
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: #000000;
-	color: white;
+	background-color: #FFFFFF;
 }
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_1 a:hover {
-	color: white;
-}
-
 #body3 #welcome #event2 {
 	margin-left: 561px;
 	margin-top: -170px;
@@ -803,16 +769,6 @@ image body {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_2 a {
-	color: #000000;
-}
-
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_2 a:hover {
-	color: white;
-}
-
 #wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_3 {
 	width: 150px;
 	border-color: #000000;
@@ -828,11 +784,6 @@ image body {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_3 a {
-	color: #000000;
-}
-
 #wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_3:hover  {
 	width: 150px;
 	border-color: #000000;
@@ -847,13 +798,8 @@ image body {
 	font-size: x-large;
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: #000000;
+	background-color: #FFFFFF;
 }
-
-#wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_3 a:hover {
-	color: white;
-}
-
 #wrapper #body3 #welcome #BUY_TICKETS_BOTTOM_2:hover  {
 	width: 150px;
 	border-color: #000000;
@@ -868,8 +814,7 @@ image body {
 	font-size: x-large;
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: #000000;
-	color: white;
+	background-color: #FFFFFF;
 }
 #body3 #welcome #event3 {
 	margin-left: 1156px;
